// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matchRoutes > 1 match 1`] = `
[
  {
    "handler": {
      "modules": [],
      "route": {
        "link": [
          [],
          [],
        ],
        "mod": [],
        "path": "/",
      },
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
    "location": "/",
    "next": undefined,
    "params": {},
  },
]
`;

exports[`matchRoutes > 1 match with params 1`] = `
[
  {
    "handler": {
      "modules": [],
      "route": {
        "link": [
          [],
          [],
        ],
        "mod": [],
        "path": "/[:id]",
      },
      "test": {
        "keys": [
          "id",
        ],
        "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
    "location": "/100",
    "next": undefined,
    "params": {
      "id": "100",
    },
  },
]
`;

exports[`matchRoutes > 2 matches 1`] = `
[
  {
    "handler": {
      "modules": [],
      "route": {
        "link": [
          [],
          [],
        ],
        "mod": [],
        "path": "/",
      },
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
      "tree": [
        {
          "modules": [],
          "route": {
            "link": [
              [],
              [],
            ],
            "mod": [],
            "path": "/abc",
          },
          "test": {
            "keys": [],
            "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
          },
        },
      ],
    },
    "location": "/",
    "next": {
      "handler": {
        "modules": [],
        "route": {
          "link": [
            [],
            [],
          ],
          "mod": [],
          "path": "/abc",
        },
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
      "location": "/abc",
      "next": undefined,
      "params": {},
    },
    "params": {},
  },
  {
    "handler": {
      "modules": [],
      "route": {
        "link": [
          [],
          [],
        ],
        "mod": [],
        "path": "/abc",
      },
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
    "location": "/abc",
    "next": undefined,
    "params": {},
  },
]
`;

exports[`matchRoutes > no matches 1`] = `[]`;
